Acento adicionado no curso de Integração Contínua

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <ul>
         <li>DOcker</li>
         <li>React</li>
-        <li>Integração Continua</li>
+        <li>Integração Contínua</li>
         <li>Ansible</li>
         <li>Vangrant</li>
     </ul>
